Fix layout of collaborate page. Stop text from overflowing in hero image banner.

--- a/themes/catalyst/sass/_collaborate.scss
+++ b/themes/catalyst/sass/_collaborate.scss
@@ -20,7 +20,18 @@
     .intro-copy {
         @include intro-copy;
     }
-    .main-copy-container {
+    .main-copy-container{
+        height: auto;
+        width: 100%;
+        margin: 0 0 2rem;
+
+        .navigation-button{
+            margin: 0 auto 5rem;
+        }
+
+    }
+    .main-copy-text {
+        @include main-copy;
         margin-bottom: 1.5rem;
 
         @include media ($desktop-width) {
@@ -44,50 +55,42 @@
             font-size: 1.85rem;
         }
     }
-    .content-container {
-        padding: 0 1rem;
-        .partners-information-container {
-            margin: 3rem auto;
+
+    .partners-information-container {
+        margin: 0 auto;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        .partners-information {
+            height: auto;
+            width: 100%;
+            margin: 0 0 2rem;
+        }
+        .small-header {
+            margin-top: 4rem;
+            margin-bottom: 1.25rem;
+            font-size: 1.75rem;
+            font-weight: $font__bold;
+            color: $color__text-main;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
             @include media($desktop-width) {
-                @include flex-row(wrap, space-between, baseline);
-                margin: 5rem auto;
-                padding: 0 4rem;
+                margin: 2rem 0 1.5rem;
+                font-size: 2rem;
+            }
+        }
+        .partners-copy, .investors-copy {
+            @include main-copy;
+            text-align: center;
+        }
 
-            }
-            .partners-information {
-                height: auto;
-                margin: 0 0 2rem;
-               @include media($desktop-width) {
-                    width: 490px;
-                    margin: 0 auto;
-                    display: inline-block;
-                }
-            }
-            .small-header {
-                margin-top: 4rem;
-                margin-bottom: 1.25rem;
-                font-size: 1.75rem;
-                font-weight: $font__bold;
-                color: $color__text-main;
-                text-align: center;
-                text-transform: uppercase;
-                letter-spacing: 1.5px;
-                @include media($desktop-width) {
-                    margin: 2rem 0 1.5rem;
-                    font-size: 2rem;
-                }
-            }
-            .partners-copy, .investors-copy {
-                @include main-copy;
-                text-align: center;
-            }
+        .partners-copy:nth-child(3), .investors-copy:nth-child(3) {
+            margin-bottom: 1.5rem;
 
-            .partners-copy:nth-child(3), .investors-copy:nth-child(3) {
-                margin-bottom: 1.5rem;
-
-                @include media($desktop-width) {
-                    margin-bottom: 3rem;
-                }
+            @include media($desktop-width) {
+                margin-bottom: 3rem;
             }
         }
     }
