--- a/themes/catalyst/sass/_mixins.scss
+++ b/themes/catalyst/sass/_mixins.scss
@@ -66,7 +66,7 @@
 	height: auto;
 	max-width: 650px;
 	margin: 0 auto;
-	padding: 0.55rem 0;
+	padding: 1rem;
 	font-family: $font__secondary;
 	font-size: $font__mobile-size;
 	line-height: $line-height-body;
